Fixed bug #24253 (missing variables when register_globals is on) Fixed a memory leak when more then 1 E|S flag is passed to gpc_order. Fixed a memory leak when variables_order is not set and gpc_order has S|s flag. Optimized out duplicate parsing of the variables order string.